[package]
name = "event_poy"
version = "0.1.0"
authors = ["Wxp97"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.5.0"
tokio-postgres = "0.7.2"
#zmq-sys = "0.11.0"
futures = "0.3.15"
publisher = { path = "./publisher" }
subscriber = { path = "./subscriber" }


[workspace]

members = [
    "publisher",
    "subscriber"
]