[package]
authors = ["Wesley Parr <rustchain64@gmail.com>"]
edition = "2018"
name = "event_hub"
version = "0.1.0"

[dependencies]
chrono = ""
db_connect = {path = "../db_connect"}
futures = {version = "0.3.15", default-features = false}
nng = ""
rand = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros"]}
tokio = {version = "1", features = ["full"]}
